# Ticitl-Website

./: Dockerfile  README.md  app.py  fly.toml  podman.sh  pyproject.toml
ticitl_web/: __init__.py
ticitl_web/core/: views.py
ticitl_web/static/css/: index.css
ticitl_web/templates/core/: index.html  signup.html
